--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,25 +1,38 @@
 [buildout]
 develop = . 
-parts = scripts test
-versions = versions
+parts =
+    instance
+    test
 extends = 
-    http://dist.plone.org/release/4.0.1/versions.cfg
-    http://good-py.appspot.com/release/dexterity/1.0b1?plone=4.0.1
+    http://dist.plone.org/release/4.2-latest/versions.cfg
+find-links = 
+    http://dist.plone.org/release/4.2-latest
+    http://dist.plone.org/thirdparty
+versions = versions
+sources = sources
+#extensions = mr.developer
+auto-checkout = *
 
-[versions]
-
-[scripts]
-recipe = zc.recipe.egg
+[instance]
+recipe = plone.recipe.zope2instance
+user = admin:admin
+http-address = 8080
+debug-mode = off
+verbose-security = on
+blob-storage = var/blobstorage
 eggs = 
+    Pillow
     collective.chimpdrill
-    zest.releaser
-    ZopeSkel
-    PasteScript
-    PasteDeploy
-    Paste
-    zopeskel.dexterity
 
 [test]
 recipe = zc.recipe.testrunner
 defaults = ['--tests-pattern', '^f?tests$', '-v']
-eggs = collective.chimpdrill
+eggs = 
+    Pillow
+    collective.chimpdrill [test]
+
+[sources]
+#collective.chimpdrill = git git://github.com/collective/collective.chimpdrill.git
+
+[versions]
+
